@@ -1,3 +1,9 @@
+Tue Jul 18 16:55:31 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>
+
+        * ace/Makefile.am (libACE_la_SOURCES, nobase_include_HEADERS):
+
+          Added new Sig_{Adapter,Handler}.* source and header files.
+
 Mon Jul 17 23:18:52 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
 
         * ace/README: Documented the ACE_TIMEPROBE_ASSERTS_FIXED_SIZE macro.
